Simplify markup and styles [TASK-1097] - as part of adding a product name to the header, alignment issues were encountered and best fixed by simplifying and correcting markup used in header comonents like the signin widget.

--- a/src/plugin/modules/signinWidget.css
+++ b/src/plugin/modules/signinWidget.css
@@ -1,3 +1,3 @@
-.widget-auth2_signin {
-    margin-top: 3px
+.widget-auth2_signin .navbar {
+    margin-bottom: 0;
 }
